# ray-casting

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  color.h  conf.h  docker-compose.yaml  event.c  event.h  font.c  font.h  game.c  game.h  logger.c  logger.h  main.c  math.c  math.h  ray.c  ray.h  ringbuffer.c  ringbuffer.h  shell.nix  test.c  test.h  text.c  util.c  util.h  vector.c  vector.h  world.c  world.h  world.txt
.github/workflows/: build.yml  common.yml  docker.yml  emscripten.yml  linux.yml  test.yml
fonts/: font8x8_basic.h
src/: color.h  conf.h  confvalidate.h  event.c  event.h  fs.c  fs.h  game.c  game.h  logger.c  logger.h  main.c  math.c  math.h  menu.c  menu.h  ray.c  ray.h  text.c  text.h  util.c  util.h  vector.c  vector.h  version.c.in  version.h  world.c  world.h
tests/: main.c  runner.c  runner.h  test.c  test.h  tests.c  util.c  util.h
